# typetester

./: CLAUDE.md  Cargo.toml  README.md  plan.md  stats_viewer.html
.github/workflows/: ci.yml
src/: main.rs
texts/advanced/: philosophy.txt
texts/programming/: rust_code.txt
texts/quotes/: steve_jobs.txt
texts/samples/: multiline_sample.txt  tab_sample.txt
