[package]
name = "keysentry"
version = "0.1.0"
edition = "2024"
description = "The Unforgiving Typing Trainer - No cheating allowed"
authors = ["Nishant Joshi"]
license = "MIT"
repository = "https://github.com/your-username/keysentry"
keywords = ["typing", "trainer", "terminal", "tui", "productivity"]
categories = ["command-line-utilities", "education"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
